# ChatGPT-Cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ChatGPT/: CMakeLists.txt
ChatGPT/include/: ChatGPT.h
ChatGPT/src/: ChatGPT.cpp
include/: ChatGPT.h  Error.h  Types.h
src/: ChatGPT.cpp  Error.cpp
